--- a/blog/templates/blog/see_blogs.html
+++ b/blog/templates/blog/see_blogs.html
@@ -1,44 +1,169 @@
-{% extends 'blog/base.html' %}
+<!DOCTYPE html>
+{% load static %}
+<html lang="en">
 
-{% block content %}
-<section class="mt-5 pt-5">
-  <!-- show an edit button if user is signed in -->
-  {% if request.user.is_authenticated %}
-  <div class="row">
-    <div class="col-md-12">
-      <a style="float: left; margin-left: 120px;" class="btn btn-danger" href="{% url 'edit_blog' blog.id %}">Delete Blog</a>
-      <a class="btn btn-primary" href="{% url 'edit_blog' blog.id %}">EditBlog</a>
-      <a style="float: right; margin-right: 120px;" class="btn btn-info" href="{% url 'home' %}">Home</a>
-    </div>
-  </div>
-  {% endif %}
+<head>
+  <!-- basic -->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- mobile metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+  <!-- site metas -->
+  <title>Dr. Qasim Pasta's Blog</title>
+  <meta name="keywords" content="">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <!-- bootstrap css -->
+  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css'%}">
+  <!-- style css -->
+  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css'%}">
+  <!-- Responsive-->
+  <link rel="stylesheet" href="{% static 'css/responsive.css'%}">
+  <!-- fevicon -->
+  <link rel="icon" href="{% static 'images/fevicon.png'%}" type="image/gif" />
+  <!-- Scrollbar Custom CSS -->
+  <link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css'%}">
+  <!-- Tweaks for older IEs-->
+  <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+  <!-- fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Righteous&display=swap" rel="stylesheet">
+  <!-- owl stylesheets -->
+  <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css'%}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
+    media="screen">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Directory Theme by Bootstrapious</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="all,follow">
+  <!-- Price Slider Stylesheets -->
+  <link rel="stylesheet" href="{% static 'css/nouislider.css'%}">
+  <!-- Google fonts - Playfair Display-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700">
+  <!-- Google fonts - Poppins-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,400i,700">
+  <!-- swiper-->
+  <link rel="stylesheet" href="{% static 'css/swiper.min.css'%}">
+  <!-- Magnigic Popup-->
+  <link rel="stylesheet" href="{% static 'css/magnific-popup.css'%}">
+  <!-- theme stylesheet-->
+  <link rel="stylesheet" href="{% static 'css/default.css'%}" id="theme-stylesheet">
 
-  <div class="container">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
+</head>
 
-    <div class="row text-center">
-      <div class="col-xl-10 mx-auto"><img class="img-fluid mb-5" src="/{{blog.image}}" alt=""></div>
-    </div>
-    <div class="row">
-      <div class="col-xl-8 col-lg-10 mx-auto">
-        <div class="text-content">
-          <h1 class="mb-4">{{blog.title}}</h1>
-          <!-- show tags in lighter color -->
-          <p class="mb-4" style="color: #999;">Tags: {{blog.tags}}</p>
-          <p class="mb-4">{{blog.description}}</p>
-          <p class="mb-4">{{blog.content}}</p>
-          <p class="mb-4">{{blog.author}}</p>
-          <p class="mb-4">{{blog.date}}</p>
+<body>
+  <div class="header_section">
+    <div class="header_main">
+      <div class="container-fluid">
+        <div class="logo">
+          <row style="display: inline-flex;">
+            <div class="col-md-3" style="position: absolute; left: 0px;">
+              {% if request.user.is_authenticated %}
+              <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
+                <a class="btn btn-info" href="{% url 'add_blog' %}">Add Blogs</a>
+              </li>
+              {% endif %}
+            </div>
+            <div class="col-md-6">
+              <a class="navbar-brand py-1" href="{% url 'about' %}">
+                <h3 style="color: antiquewhite !important;">Dr. Qasim Pasta's Blog</h3>
+              </a>
+            </div>
+            <div class="col-md-3" style="position: absolute; right: 0px;">
+              <div class="" id="">
 
+                <ul class="navbar-nav ml-auto">
+
+                  {% if request.user.is_authenticated %}
+                  <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
+                    <a class="btn btn-danger" href="{% url 'logout' %}">Logout</a>
+                  </li>
+
+                  {% else %}
+                  <li class="nav-item mt-3 mt-lg-0 ml-lg-3 d-lg-none d-xl-inline-block">
+                    <a class="btn btn-primary" href="{% url 'login' %}">Login</a>
+                  </li>
+
+                  {% endif %}
+
+                </ul>
+              </div>
+            </div>
+          </row>
         </div>
       </div>
     </div>
   </div>
-</section>
+
+  <section class="mt-5 pt-5">
+    <!-- show an edit button if user is signed in -->
+    {% if request.user.is_authenticated %}
+    <div class="row">
+      <div class="col-md-12">
+        <a style="float: left; margin-left: 120px;" class="btn btn-danger" href="{% url 'edit_blog' blog.id %}">Delete
+          Blog</a>
+        <a class="btn btn-primary" href="{% url 'edit_blog' blog.id %}">EditBlog</a>
+        <a style="float: right; margin-right: 120px;" class="btn btn-info" href="{% url 'home' %}">Home</a>
+      </div>
+    </div>
+    {% endif %}
+
+    <div class="container">
 
 
+      <div class="row text-center">
+        <div class="col-xl-10 mx-auto"><img class="img-fluid mb-5" src="/{{blog.image}}" alt=""></div>
+      </div>
+      <div class="row">
+        <div class="col-xl-8 col-lg-10 mx-auto">
+          <div class="text-content">
+            <h1 class="mb-4">{{blog.title}}</h1>
+            <!-- show tags in lighter color -->
+            <p class="mb-4" style="color: #999;">Tags: {{blog.tags}}</p>
+            <p class="mb-4">{{blog.description}}</p>
+            <p class="mb-4">{{blog.content}}</p>
+            <p class="mb-4">{{blog.author}}</p>
+            <p class="mb-4">{{blog.date}}</p>
 
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <div class="footer_section layout_padding">
+    <div class="container">
+      <div class="input_btn_main">
+        <input type="text" class="mail_text" placeholder="Enter your email" name="Enter your email">
+        <div class="subscribe_bt"><a href="#">Subscribe</a></div>
+      </div>
+      <div class="location_main">
+        <div class="call_text"><img src="{% static 'images/call-icon.png'%}"></div>
+        <div class="call_text"><a href="#">Call +92 312-3456789</a></div>
+        <div class="call_text"><img src="{% static 'images/mail-icon.png'%}"></div>
+        <div class="call_text"><a href="#">demo@gmail.com</a></div>
+      </div>
+      <div class="social_icon">
+        <ul>
+          <li><a href="#"><img src="{% static 'images/fb-icon.png'%}"></a></li>
+          <li><a href="#"><img src="{% static 'images/twitter-icon.png'%}"></a></li>
+          <li><a href="#"><img src="{% static 'images/linkedin-icon.png'%}"></a></li>
+          <li><a href="#"><img src="{% static 'images/instagram-icon.png'%}"></a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
+</body>
 
 </html>
 
@@ -70,5 +195,3 @@
     })
   });
 </script>
-
-{% endblock %}
